Extend App with App Actions Common BIIs
b/154138982

Change-Id: I3990d641dd78192b434b926809abd3f3c37f2a06

--- a/app/src/main/res/menu/tasks_fragment_menu.xml
+++ b/app/src/main/res/menu/tasks_fragment_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (C) 2019 The Android Open Source Project
+  ~ Copyright (C) 2020 Google LLC
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -17,6 +17,12 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/searchBar"
+        app:showAsAction="collapseActionView"
+        android:icon="@drawable/ic_search_black_24dp"
+        app:actionViewClass="android.widget.SearchView"
+        android:title="@string/menu_search" />
     <item
         android:id="@+id/menu_filter"
         android:title="@string/menu_filter"
