--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,25 +5,35 @@
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
+  ~     http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software
   ~ distributed under the License is distributed on an "AS IS" BASIS,
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
+  ~
   -->
 
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-
-    <dimen name="fab_margin">16dp</dimen>
-
-    <dimen name="list_item_padding">8dp</dimen>
-    <dimen name="header_height">192dp</dimen>
-    <dimen name="header_padding">16dp</dimen>
-    <dimen name="header_image_width">100dp</dimen>
+    <array name="completed_tasks_synonyms">
+        <item>completed</item>
+        <item>finished</item>
+        <item>finished tasks</item>
+    </array>
+    <array name="active_tasks_synonyms">
+        <item>active</item>
+        <item>pending</item>
+        <item>pending tasks</item>
+        <item>open</item>
+    </array>
+    <array name="all_tasks_synonyms">
+        <item>all</item>
+    </array>
+    <array name="statistics_synonyms">
+        <item>show statistics</item>
+        <item>show progress</item>
+        <item>stats</item>
+    </array>
 
 </resources>
