Contribution guidelines and minor fixes
Change-Id: Ia3f85e03ac469535c564c7bfaf340234efc9fd21

Remove required unsupported attribute

Fixes: b/174245341
Change-Id: I62fe0b913344d6b6711f3cf24264aca122beb3d7

--- a/app/src/main/res/xml/actions.xml
+++ b/app/src/main/res/xml/actions.xml
@@ -25,7 +25,7 @@
         <!-- feature parameter is defined in inline inventory(entitySetId).
         E.g. active, pending, all tasks, or statistics. -->
         <parameter name="feature">
-            <entity-set-reference entitySetId="FeatureEntitySet" required="false"/>
+            <entity-set-reference entitySetId="FeatureEntitySet"/>
         </parameter>
 
         <fulfillment urlTemplate="{@url}"/>
