--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -75,8 +75,7 @@
             android:targetClass="com.example.android.architecture.blueprints.todoapp.tasks.TasksActivity">
             <parameter
                 android:name="feature"
-                android:key="feature"
-                shortcutMatchRequired="true"/>
+                android:key="feature"/>
         </intent>
     </capability>
 </shortcuts>
